# RawIron

./: .clangd  .gitignore  CMakeLists.slim.txt  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Launch RawIron Editor.cmd  Launch RawIron Visual Shell.cmd  Launch UiMenu VN Demo.cmd  README.md  SECURITY.md  cspell.json  launch_rawiron_editor.sh  launch_rawiron_visual_shell.sh  play-forest-ruins.cmd  play-liminal.cmd
Apps/RawIron.Editor/: CMakeLists.txt
Apps/RawIron.Editor/src/: RegisterBundledGamePreviews.cpp  main.cpp
Apps/RawIron.ParticleShowcase/: CMakeLists.txt  Launch Particle Showcase.cmd
Apps/RawIron.ParticleShowcase/src/: main.cpp
Apps/RawIron.Player/: CMakeLists.txt
Apps/RawIron.Player/src/: main.cpp
Apps/RawIron.Preview/: CMakeLists.txt
Apps/RawIron.Preview/src/: main.cpp
Apps/RawIron.UiMenu/: CMakeLists.txt
Apps/RawIron.UiMenu/src/: main.cpp
Apps/RawIron.VisualShell/: CMakeLists.txt
Apps/RawIron.VisualShell/src/: ShellWorkshop.cpp  ShellWorkshop.h  VisualShellApp.cpp  VisualShellDesktop.cpp  VisualShellDesktop.h  VisualShellLauncherArt.cpp  VisualShellLauncherArt.h  VisualShellTypes.h  VisualShellUiColors.h  VisualShellUiDraw.cpp  VisualShellUiDraw.h  VisualShellWorkshopLayout.h  WorkshopForgeGpu.cpp  WorkshopForgeGpu.h  main.cpp
Games/Common/: CMakeLists.txt
Games/Common/src/: GameRuntimeCore.cpp  RuntimeDiagnosticsStandaloneDraw.cpp
Source/RawIron.Audio/: CMakeLists.txt
Source/RawIron.Audio/src/: AudioEnvironment.cpp  AudioManager.cpp  MiniaudioBackend.cpp  MiniaudioBackendStub.cpp
Source/RawIron.Content/: CMakeLists.txt
Source/RawIron.Content/src/: AssetDocument.cpp  AssetPackageManifest.cpp  DeclarativeModelDefinition.cpp  EngineAssets.cpp  GameManifest.cpp  GameRuntimeSupport.cpp  PipelineAssetInventory.cpp  PrefabExpansion.cpp  ScriptScalars.cpp  Value.cpp  ValueSchema.cpp  WorldVolumeContent.cpp
Source/RawIron.Core/: CMakeLists.txt
Source/RawIron.Core/src/: ActionBindings.cpp  CommandLine.cpp  ContentPresentation.cpp  CrashDiagnostics.cpp  FixedStepAccumulator.cpp  FrameArena.cpp  GameSimulationClock.cpp  InputLabelFormat.cpp  InputPolling.cpp  JsonScan.cpp  Log.cpp  MainLoop.cpp  RenderCommandStream.cpp  RenderRecorder.cpp  RenderSubmissionPlan.cpp  Scene.cpp
Source/RawIron.Debug/: CMakeLists.txt
Source/RawIron.Debug/src/: RuntimeSnapshots.cpp
Source/RawIron.DevInspector/: CMakeLists.txt
Source/RawIron.DevInspector/src/: DevelopmentInspector.cpp
Source/RawIron.Editor.BundledGames/: CMakeLists.txt
Source/RawIron.EditorPreview/: CMakeLists.txt
Source/RawIron.EditorPreview/src/: PreviewSceneRegistry.cpp
Source/RawIron.Logic/: CMakeLists.txt
Source/RawIron.Logic/src/: LogicAuthoring.cpp  LogicGraph.cpp  LogicKitManifest.cpp  LogicPortSchema.cpp  LogicVisualPrimitives.cpp
Source/RawIron.Render.Software/: CMakeLists.txt
Source/RawIron.Render.Software/src/: PreviewTexture.cpp  RgbaImagePathCache.cpp  ScenePreview.cpp  SoftwarePreview.cpp
Source/RawIron.Render.Vulkan/: CMakeLists.txt
Source/RawIron.Render.Vulkan/shaders/: NativeComposite.frag  NativeComposite.vert  NativeScenePreview.frag  NativeScenePreview.vert  NativeShadowDepth.vert  NativeSkybox.frag  NativeSkybox.vert
Source/RawIron.Render.Vulkan/src/: VulkanBootstrap.cpp  VulkanCommandBufferRecorder.cpp  VulkanCommandList.cpp  VulkanCommandRecorder.cpp  VulkanFrameSubmission.cpp  VulkanIntentStaging.cpp  VulkanNativeScenePreview.cpp  VulkanPipelineStateCache.cpp  VulkanPreviewPresenter.cpp
Source/RawIron.Runtime/: CMakeLists.txt
Source/RawIron.Runtime/src/: EntityIoTelemetry.cpp  ExperiencePresets.cpp  LevelScopedSchedulers.cpp  RuntimeCore.cpp  RuntimeEventBus.cpp  RuntimeId.cpp  RuntimeTuning.cpp
Source/RawIron.SceneUtilities/: CMakeLists.txt
Source/RawIron.SceneUtilities/src/: Animation.cpp  AnimationLibraryHydration.cpp  FbxLoader.cpp  GltfLoader.cpp  Helpers.cpp  HumanoidAnimationProfiles.cpp  HumanoidRigNames.cpp  LevelObjectRegistry.cpp  LoftPrimitiveStack.cpp  ModelLoader.cpp  ParticleSystem.cpp  PhysicsPropSpawn.cpp  PrimitiveTypeCanonical.cpp  PrimitivesCsvIO.cpp  Raycast.cpp  RuntimeMeshFactory.cpp  SceneEntityPhysics.cpp  SceneKit.cpp  SceneRenderSubmission.cpp  SceneStateIO.cpp  SceneStructuralTraceFeed.cpp  SceneSubtreeColliders.cpp  SceneSubtreeHelpers.cpp  SceneUtils.cpp  ScriptedCameraReview.cpp  StructuralBrush.cpp  StructuralPrimitiveBundle.cpp  TraceMeshRefinement.cpp  WorkspaceSandbox.cpp
Source/RawIron.Spatial/: CMakeLists.txt
Source/RawIron.Spatial/src/: SpatialIndex.cpp
Source/RawIron.Structural/: CMakeLists.txt
Source/RawIron.Structural/src/: ConvexClipper.cpp  StructuralCompiler.cpp  StructuralDeferredOperations.cpp  StructuralGraph.cpp  StructuralPrimitives.cpp
Source/RawIron.Trace/: CMakeLists.txt
Source/RawIron.Trace/src/: AabbOverlapContact.cpp  BvhLifetimeRegistry.cpp  EntityPhysics.cpp  ImpactDecalPlacement.cpp  KinematicPhysics.cpp  LocomotionRuntimeBridge.cpp  LocomotionTuning.cpp  MovementController.cpp  ObjectPhysics.cpp  SpatialQueryHelpers.cpp  SweptAabbContact.cpp  SweptVolumeContactSolver.cpp  TraceScene.cpp
Source/RawIron.UI/: CMakeLists.txt
Source/RawIron.UI/src/: UiCommandLine.cpp  UiFlowSession.cpp  UiJsonIO.cpp
Source/RawIron.Validation/: CMakeLists.txt
Source/RawIron.Validation/src/: ColorParse.cpp  DataSchema.cpp  DistinctStrings.cpp  IdFormat.cpp  LevelPlayerSpawn.cpp  Schemas.cpp  StringPattern.cpp
Source/RawIron.World/: CMakeLists.txt
Source/RawIron.World/src/: AccessFeedbackState.cpp  BuiltinEntityCommandRouting.cpp  CheckpointPersistence.cpp  DeveloperConsoleState.cpp  DialogueCueState.cpp  EntityInputDispatchPipeline.cpp  HostileCharacterAi.cpp  HudChannelTtlScheduler.cpp  Instrumentation.cpp  InteractionPromptState.cpp  InventoryState.cpp  LevelFlowPresentationState.cpp  LogicEntityIoTelemetry.cpp  MissionCompletionFlow.cpp  NpcAgentState.cpp  PickupFeedbackState.cpp  (+9 more)
Tests/: CMakeLists.txt
Tests/RawIron.Core.Tests/: CMakeLists.txt
Tests/RawIron.EngineImport.Tests/: CMakeLists.txt
Tests/cmake/: VerifyCommandOutput.cmake
Tools/ri_tool/: CMakeLists.txt
(+738 files in other folders)
